What are these revenues from

--- a/html/index.html
+++ b/html/index.html
@@ -115,7 +115,7 @@
             <input type="number" min="0" step="0" class="num" placeholder="Revenues from other RBF, not carbon credit ($ USD) 2020" id="y2020_rev_rbf" />
             <label class="question_label">Other revenues ($ USD) 2020</label>
             <input type="number" min="0" step="0" class="num" placeholder="Other revenues ($ USD) 2020" id="y2020_rev_other" />
-            <label class="question_label">What are these revenues from?</label>
+            <label class="question_label">What are these other revenues from?</label>
             <input type="value" class="" placeholder="What are these revenues from?" id="y2020_rev_details" />
             <label class="question_label">Total revenue 2020 ($ USD)</label><span id="y2020_rev" /></span>
             <label class="question_label">Were You EBITDA Profitable in 2020?</label>
@@ -141,7 +141,7 @@
             <label class="question_label">Revenues from other RBF, not carbon credit ($ USD) 2021</label>
             <input type="number" min="0" step="0" class="num" placeholder="Revenues from other RBF, not carbon credit ($ USD) 2021" id="y2021_rev_rbf" /> <label class="question_label">Other revenues ($ USD) 2021</label>
             <input type="number" min="0" step="0" class="num" placeholder="Other revenues ($ USD) 2021" id="y2021_rev_other" />
-            <label class="question_label">What are these revenues from?</label><input type="value" class="" placeholder="What are these revenues from?" id="y2021_rev_details">
+            <label class="question_label">What are these other revenues from?</label><input type="value" class="" placeholder="What are these revenues from?" id="y2021_rev_details">
             <label class="question_label">Total revenue 2021 ($ USD)</label><span id="y2021_rev" /></span>
             <label class="question_label">Were You EBITDA profitable in 2021?</label>
             <select id="y2021_ebitda">
