Fixed error check and submit button

--- a/html/index.html
+++ b/html/index.html
@@ -491,7 +491,9 @@
 <button id="previous_section" class="navigation"></button>
 <button id="next_section" class="navigation">Go forward to Company Information</button>
 <br>
-<button id="check_errors" onclick="error_check()">Save Form</button><button id="submit_btn" onclick="error_check()">Submit Form</button>
+<button id="save_btn" onclick="save_values()">Save Form</button>
+<br>
+<button id="submit_btn" onclick="save_values()">Submit Form</button>
 <br>
 <button id="check_errors" onclick="error_check()">Review Submission</button>
 <span id="save_indicator">SAVING</span>
